--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <body>
   <main class="wrap">
     <section class="block">
-      <img src="oferta.jpg" alt="Oferta especial PUFF CLUB" loading="eager" />
+      <img src="file_00000000b46061f6b4777c06967c90c9.png" alt="Oferta especial PUFF CLUB" loading="eager" />
     </section>
 
     <section class="block">
