--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <body>
   <main class="wrap">
     <section class="block">
-      <img src="file_00000000414861f59e890f29a985334e.png" alt="Oferta especial PUFF CLUB" loading="eager" />
+      <img src="ChatGPT Image 30 oct 2025, 11_37_00 p.m..png" alt="Oferta especial PUFF CLUB" loading="eager" />
     </section>
 
     <section class="block">
