--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <section class="block">
       <a id="waLink" class="wa-link" href="#">
-        <img class="wa-img" src="btn-whatsapp.png" alt="Contactar por WhatsApp" />
+        <img class="wa-img" src="ChatGPT Image 21 nov 2025, 12_49_20 a.m..png" alt="Contactar por WhatsApp" />
       </a>
     </section>
 
