Remove image source from index.html

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </section>
 
     <section class="block">
-      <img src="extra.jpg" alt="Información adicional" loading="lazy" />
+      <img src="" alt="Información adicional" loading="lazy" />
     </section>
 
     <footer>© 2025 PUFF CLUB • Todos los derechos reservados</footer>
