Update image source in index.html

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <body>
   <main class="wrap">
     <section class="block">
-      <img src="ChatGPT Image 30 oct 2025, 11_37_00 p.m..png" alt="Oferta especial PUFF CLUB" loading="eager" />
+      <img src="ChatGPT Image 21 nov 2025, 12_51_06 a.m..png" alt="Oferta especial PUFF CLUB" loading="eager" />
     </section>
 
     <section class="block">
